fix dark mode colors

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -20,15 +20,12 @@ body > footer {
 }
 
 header > section {
-    background-color: rgb(252, 250, 245);
     padding:10px;
 }
 
 
 .message {
-    background-color:rgb(250, 250, 250);
     border-radius:25px;
-    /* white-space: pre-wrap; */
 }
 
 .message-received {
